--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0d1421;
+    /* slate-900 */
+    --background: rgb(15 23 42 / var(--tw-bg-opacity, 1));
     --foreground: #ededed;
   }
 }
